--- a/site/NSI/Terminale/C01/Modularite/index.html
+++ b/site/NSI/Terminale/C01/Modularite/index.html
@@ -876,19 +876,19 @@ en faisant commencer leur nom par un cracatère <em>underscore</em> _</p>
 <tbody>
 <tr>
 <td align="left"><code>polynome(t)</code></td>
-<td align="left">Vérifie que le tuple t  sous la forme (a,b,c) représente bien un polynôme de degré 2</td>
+<td align="left">Vérifie que le tuple <code>t</code>  sous la forme <code>(a,b,c)</code> représente bien un polynôme de degré 2</td>
 </tr>
 <tr>
 <td align="left"><code>valeursRacines(p)</code></td>
-<td align="left">Renvoie les valeurs des racines, et None si il n'existe pas de recines réelles</td>
+<td align="left">Renvoie les valeurs des racines, et <code>None</code> si il n'existe pas de recines réelles</td>
 </tr>
 <tr>
 <td align="left"><code>convexite(p)</code></td>
-<td align="left">Renvoie la convexité de la courbe représentative du polynôme</td>
+<td align="left">Renvoie la convexité de la courbe représentative du polynôme sous la forme d'une chaîne de caractère en minuscule</td>
 </tr>
 <tr>
 <td align="left"><code>tangente(p,x)</code></td>
-<td align="left">Renvoie l'équation de la tangente à la courbe du polynôme p en x</td>
+<td align="left">Renvoie l'équation de la tangente à la courbe du polynôme <code>p</code> en <code>x</code></td>
 </tr>
 </tbody>
 </table>
