MAJ Pygame + build

--- a/site/NSI/Terminale/C01/IntroPOO/index.html
+++ b/site/NSI/Terminale/C01/IntroPOO/index.html
@@ -1276,7 +1276,7 @@ True
 <ol>
 <li>Chaque personnage tire son <em>initiative</em> en ajoutant un nombre aléatoire entre 1 et 20 à sa
 valeur de rapidite.</li>
-<li>Le joueur ayant l'initiative la plus élevée effectue son attaque en premier, et le second se défend.</li>
+<li>Le joueur ayant l'initiative la plus élevée effectue son attaque en premier, et le second se défend. En cas d'égalité d'initiative, le joeur d'attaque sera celui qui possède la rapidité la plus élevée. En cas d'égalité de rapidité, le premier joueur sera déterminé aléatoirement.</li>
 <li>Si le deuxième joueur est toujours vivant (ses points de vie sont supérieurs à 0), il effectue son attaque,
 et le premier se défend.</li>
 <li>Si les deux joueurs sont toujours vivants, on recommence un nouveau tour en reprenant en 1. Sinon on affiche le vainqueur.</li>
@@ -1296,7 +1296,7 @@ Round 2
 ...
 
 Round n
-Le vainqueur est ..., il lui reste ... points de vie.
+Le vainqueur est ..., il lui reste ... points de vie. Il gagne ... points d&#39;expériences.
 </code></pre></div>
 <p>Pour réaliser ce programme, vopus devrez :</p>
 <ol>
