--- a/site/Miscellanees/Pygame/InstallationPygame/index.html
+++ b/site/Miscellanees/Pygame/InstallationPygame/index.html
@@ -819,6 +819,10 @@
                 
 
 
+  <h2 id="__comments">Comments</h2>
+  <div id="disqus_thread"></div>
+  <script>var disqus_config=function(){this.page.url="https://www.zonensi.fr/Miscellanees/Pygame/InstallationPygame/",this.page.identifier="Miscellanees/Pygame/InstallationPygame/"};window.addEventListener("load",function(){var e=document,i=e.createElement("script");i.src="//zonensi.disqus.com/embed.js",i.setAttribute("data-timestamp",+new Date),(e.head||e.body).appendChild(i)})</script>
+
               
             </article>
           </div>
