--- a/site/NSI/Terminale/C01/IntroPOO/index.html
+++ b/site/NSI/Terminale/C01/IntroPOO/index.html
@@ -1327,6 +1327,10 @@ la classe <code>Personnage</code>) sera rendu via le cahier de texte de pronote,
                 
 
 
+  <h2 id="__comments">Comments</h2>
+  <div id="disqus_thread"></div>
+  <script>var disqus_config=function(){this.page.url="https://www.zonensi.fr/NSI/Terminale/C01/IntroPOO/",this.page.identifier="NSI/Terminale/C01/IntroPOO/"};window.addEventListener("load",function(){var e=document,i=e.createElement("script");i.src="//zonensi.disqus.com/embed.js",i.setAttribute("data-timestamp",+new Date),(e.head||e.body).appendChild(i)})</script>
+
               
             </article>
           </div>
