--- a/site/NSI/Terminale/C01/Modularite/index.html
+++ b/site/NSI/Terminale/C01/Modularite/index.html
@@ -1065,6 +1065,10 @@ en rendant l'accès aux éléments privés impossible.</p>
                 
 
 
+  <h2 id="__comments">Comments</h2>
+  <div id="disqus_thread"></div>
+  <script>var disqus_config=function(){this.page.url="https://www.zonensi.fr/NSI/Terminale/C01/Modularite/",this.page.identifier="NSI/Terminale/C01/Modularite/"};window.addEventListener("load",function(){var e=document,i=e.createElement("script");i.src="//zonensi.disqus.com/embed.js",i.setAttribute("data-timestamp",+new Date),(e.head||e.body).appendChild(i)})</script>
+
               
             </article>
           </div>
