Ajout Merge Sort +build

--- a/site/NSI/Terminale/C02/RecursiviteTris/index.html
+++ b/site/NSI/Terminale/C02/RecursiviteTris/index.html
@@ -1135,6 +1135,12 @@ mais ce ne sera pas le cas dans ce cours) de nouveau par tri fusion.</p>
 <img _=";" alt="Merge Sort" src="https://i.redd.it/rno9aidb3bm01.png" style="width : 50%" />
 </p></p>
 </div>
+<div class="admonition example">
+<p class="admonition-title">Exemple vidéo</p>
+<p><p align="center">
+<iframe src="//video.toutatice.fr/video/24034-tri-fusion-recursif/?is_iframe=true" size="240" width="1280" height="720" style="padding: 0; margin: 0; border:0" allowfullscreen ></iframe>
+</p></p>
+</div>
 <h2 id="plus-vite-quicksort">Plus vite ! QuickSort !</h2>
 <div class="admonition abstract">
 <p class="admonition-title">Principe du QuickSort</p>
