--- a/site/NSI/Terminale/C02/RecursiviteTris/index.html
+++ b/site/NSI/Terminale/C02/RecursiviteTris/index.html
@@ -1323,7 +1323,7 @@ avec les valeurs restantes du premier tableau.</li>
 </p></li>
 <li>Quel est le cas de base ?</li>
 <li>Quel est le cas récursif ?</li>
-<li>Implémenter une fonction <code>triFusion(t1, t2)</code> qui prend en argument deux tableaux et renvoie le tableau trié contenant les éléments des deux tableaux <code>t1</code> et <code>t2</code>.</li>
+<li>Implémenter une fonction <code>triFusion(t)</code> qui prend en argument un tableau et renvoie une copie triée de ce tableau.</li>
 </ol>
 </div>
 <input id="__tabbed_3_2" name="__tabbed_3" type="radio" /><label for="__tabbed_3_2">Solution</label><div class="tabbed-content">
