Corrections orthographiques + build

--- a/site/Maths/Seconde/AlgoBases/AffectationTypes/index.html
+++ b/site/Maths/Seconde/AlgoBases/AffectationTypes/index.html
@@ -1248,14 +1248,14 @@ sur des textes), ou encore sur d'autres types de données (musiques, images, ou 
 <div class="admonition abstract">
 <p class="admonition-title">Variables, types et affectations</p>
 <p>Une <mark class="critic"><strong>variable</strong></mark> est une <em>case mémoire</em> possédant un <strong>nom</strong>, dans lequel on range une <strong>donnée</strong>.</p>
-<p>Les données informatiques de base peuvent être classeés dans 4 types différents</p>
+<p>Les données informatiques de base peuvent être classées dans 4 types différents :</p>
 <ul>
 <li>les <strong>entiers</strong> (<em>nombre entier relatif</em>) ;</li>
 <li>les <strong>flottants</strong> (<em>en simplifiant, les nombres décimaux</em>);</li>
 <li>les <strong>chaînes de caractères</strong> (<em>des suites de lettres, chiffres, symboles, encadrées par des guillemets</em>);</li>
-<li>les <strong>booléens</strong> (<em>une valeur qui ne peut être que dand deux états : Vrai et Faux</em>).</li>
+<li>les <strong>booléens</strong> (<em>une valeur qui ne peut être que dans deux états : Vrai et Faux</em>).</li>
 </ul>
-<p>L'affectation est l'opération qui consiste à &laquo; ranger &raquo; une donnée dans une variable. En pseudo-code elle est symbolisée parune flèche pointant vers la gauche  : <span class="arithmatex">\(\leftarrow\)</span>. On lira l'instruction </p>
+<p>L'affectation est l'opération qui consiste à &laquo; ranger &raquo; une donnée dans une variable. En pseudo-code elle est symbolisée par une flèche pointant vers la gauche  : <span class="arithmatex">\(\leftarrow\)</span>. On lira l'instruction </p>
 <div class="arithmatex">\[
 X \leftarrow 7
 \]</div>
@@ -1463,7 +1463,7 @@ X &amp; \leftarrow &amp; X\times X\\\hline
 \]</div>
 <ol>
 <li>Compléter le tableau d'état de la variable <span class="arithmatex">\(X\)</span>. Quelle valeur est affecté à <span class="arithmatex">\(X\)</span> à la fin de l'algorithme ?</li>
-<li>On remplace la première ligne par <span class="arithmatex">\(X \leftarrow a\)</span>, où <span class="arithmatex">\(a\)</span> est un réel donné. Laquelle de ces trois propositions correspondent à la valeur affecté à <span class="arithmatex">\(X\)</span> après exécutioon de l'algorithme ?<ul>
+<li>On remplace la première ligne par <span class="arithmatex">\(X \leftarrow a\)</span>, où <span class="arithmatex">\(a\)</span> est un réel donné. Laquelle de ces trois propositions correspondent à la valeur affecté à <span class="arithmatex">\(X\)</span> après exécution de l'algorithme ?<ul>
 <li><span class="arithmatex">\(2a+3^2\)</span></li>
 <li><span class="arithmatex">\((2a+3)^2\)</span></li>
 <li><span class="arithmatex">\(2(a+3)^2\)</span></li>
