--- a/site/Maths/Seconde/AlgoBases/AffectationTypes/index.html
+++ b/site/Maths/Seconde/AlgoBases/AffectationTypes/index.html
@@ -1491,7 +1491,7 @@ X &amp; \leftarrow &amp; 2 X\\\hline
 \]</div>
 <ol>
 <li>Compléter le tableau d'état de la variable <span class="arithmatex">\(X\)</span>. Quelle valeur est affecté à <span class="arithmatex">\(X\)</span> à la fin de l'algorithme ?</li>
-<li>On remplace la première ligne par <span class="arithmatex">\(X \leftarrow a\)</span>, où <span class="arithmatex">\(a\)</span> est un réel donné. Quelle expression dépéendant dfe <span class="arithmatex">\(a\)</span> est affectée à <span class="arithmatex">\(X\)</span> après exécutioon de l'algorithme ?</li>
+<li>On remplace la première ligne par <span class="arithmatex">\(X \leftarrow a\)</span>, où <span class="arithmatex">\(a\)</span> est un réel donné. Quelle expression dépendant de <span class="arithmatex">\(a\)</span> est affectée à <span class="arithmatex">\(X\)</span> après exécution de l'algorithme ?</li>
 </ol>
 </div>
 <input id="__tabbed_4_2" name="__tabbed_4" type="radio" /><label for="__tabbed_4_2">Solution</label><div class="tabbed-content">
