--- a/site/NSI/Terminale/C03/ListesChainees/index.html
+++ b/site/NSI/Terminale/C03/ListesChainees/index.html
@@ -1672,8 +1672,8 @@ modifient la valeur du deuxième élément de la chaine, qui devient <code>21 -&
 <div class="admonition question">
 <p class="admonition-title">Méthode constructeur <code>__init__</code> :</p>
 <div class="tabbed-set" data-tabs="10:2"><input checked="checked" id="__tabbed_10_1" name="__tabbed_10" type="radio" /><label for="__tabbed_10_1">Analyse</label><div class="tabbed-content">
-<p>Un objet <code>ListeC</code> ne contient qu'un seul attribut : la tête de la liste. Soit c'est un objet de type Chainon<code>, soit c'est l'objet</code>None<code>. La méthode</code><strong>init</strong><code>ne doit
-donc qu'initialiser un attribut</code>head<code>à la valeur</code>None`</p>
+<p>Un objet <code>ListeC</code> ne contient qu'un seul attribut : la tête de la liste. Soit c'est un objet de type <code>Chainon</code>, soit c'est l'objet <code>None</code>. La méthode <code>__init__</code> ne doit
+donc qu'initialiser un attribut <code>head</code> à la valeur <code>None</code>.</p>
 </div>
 <input id="__tabbed_10_2" name="__tabbed_10" type="radio" /><label for="__tabbed_10_2">Code</label><div class="tabbed-content">
 <table class="highlighttable"><tr><td class="linenos"><div class="linenodiv"><pre><span></span><span class="normal">1</span>
