MAJ 1ère HTML + Build

--- a/site/NSI/Terminale/C04/ModeleRelationnel/index.html
+++ b/site/NSI/Terminale/C04/ModeleRelationnel/index.html
@@ -1913,7 +1913,9 @@ Une clé étrangère est signalée dans un schéma relationnel par un <mark clas
 <p>Cette dernière doit être suffisamment riche pour permettre de générer, pour chaque arrêt de bus, une fiche donnant les horaires de passage de toutes les lignes qui déservent l'arrêt.</p>
 <p><em>La modélisation de ce réseau nécessite une réflexion au préalable sur la pertinence des informations à modéliser !</em></p>
 </div>
-<input id="__tabbed_4_2" name="__tabbed_4" type="radio" /><label for="__tabbed_4_2">Solution</label><div class="tabbed-content"></div>
+<input id="__tabbed_4_2" name="__tabbed_4" type="radio" /><label for="__tabbed_4_2">Solution</label><div class="tabbed-content">
+<p>A venir</p>
+</div>
 </div>
 </div>
 <div class="footnote">
