--- a/site/SNT/Reseaux/TCP_IP/index.html
+++ b/site/SNT/Reseaux/TCP_IP/index.html
@@ -1843,7 +1843,7 @@
 <p>Que s'est-il passé ?</p>
 </div>
 <input id="__tabbed_1_2" name="__tabbed_1" type="radio" /><label for="__tabbed_1_2">Réponse</label><div class="tabbed-content">
-<p>Les ordinateurs ont échangé des données.</p>
+<p>A venir !</p>
 </div>
 </div>
 </li>
@@ -1852,17 +1852,17 @@
 <ol>
 <li>
 <p>Quelle est l'IP de la source ?</p>
-<details class="done"><summary>Done</summary><p><code>192.168.0.10</code></p>
+<details class="done"><summary>Done</summary><p>A venir !</p>
 </details>
 </li>
 <li>
 <p>Quelle est l'IP de la destination ?</p>
-<details class="done"><summary>Done</summary><p><code>192.168.0.11</code></p>
+<details class="done"><summary>Done</summary><p>A venir !</p>
 </details>
 </li>
 <li>
 <p>Quel est le commentaire ? </p>
-<details class="done"><summary>Done</summary><p>ICMP Echo Request (ping), TTL: 64, Seq.-Nr.: 1</p>
+<details class="done"><summary>Done</summary><p>A venir !</p>
 </details>
 </li>
 </ol>
@@ -1872,17 +1872,17 @@
 <ol>
 <li>
 <p>Quelle est l'IP de la source ?</p>
-<details class="done"><summary>Done</summary><p><code>192.168.0.11</code></p>
+<details class="done"><summary>Done</summary><p>A venir !</p>
 </details>
 </li>
 <li>
 <p>Quelle est l'IP de la destination ?</p>
-<details class="done"><summary>Done</summary><p><code>192.168.0.10</code></p>
+<details class="done"><summary>Done</summary><p>A venir !</p>
 </details>
 </li>
 <li>
 <p>Quel est le commentaire ? </p>
-<details class="done"><summary>Done</summary><p>ICMP Echo Reply (pong), TTL: 64, Seq.-Nr.: 1</p>
+<details class="done"><summary>Done</summary><p>A venir !</p>
 </details>
 </li>
 </ol>
