--- a/site/SNT/Reseaux/TCP_IP/index.html
+++ b/site/SNT/Reseaux/TCP_IP/index.html
@@ -2072,7 +2072,7 @@
 </li>
 </ol>
 <h2 id="protocole-tcpip">Protocole TCP/IP</h2>
-<p>Depuis le début de cette activité, j'utilise le mot \textbf{protocole}. Mais que signifie-t-il ?</p>
+<p>Depuis le début de cette activité, j'utilise le mot <mark class="critic"><strong>protocole</strong></mark>. Mais que signifie-t-il ?</p>
 <div class="admonition question">
 <p class="admonition-title">Protocole</p>
 <p>Cherchez la définition Wikipédia et donnez la définition de &laquo; protocole &raquo; dans le cas général puis en informatique :</p>
