--- a/site/NSI/Premiere/C04/Algorithmes_Tri/index.html
+++ b/site/NSI/Premiere/C04/Algorithmes_Tri/index.html
@@ -1994,8 +1994,8 @@
 <p class="admonition-title">Quelques remarques</p>
 <ul>
 <li>Le tri par insertion est un <mark class="critic"><strong>tri en place</strong></mark>, car il trie un tableau sans avoir besoin de tableau auxilliaire.</li>
-<li>La complexité du tri par insertion est <mark class="critic"><strong>quadratique</strong></mark>, c'est-à-dire en <span class="arithmatex">\(mathscr{O}(n^2)\)</span> dans le pire des cas, quand le tableau est à l'envers. C'est aussi le cas moyen - ce qui n'est pas très bon en terme de complexité en temps.</li>
-<li>Cependant, pour un tableau trié ou presque trié, la complexité tombe en <span class="arithmatex">\(mathscr{O}(n)\)</span>, ce qui est une complexité linéaire, très efficace.</li>
+<li>La complexité du tri par insertion est <mark class="critic"><strong>quadratique</strong></mark>, c'est-à-dire en <span class="arithmatex">\(\mathscr{O}(n^2)\)</span> dans le pire des cas, quand le tableau est à l'envers. C'est aussi le cas moyen - ce qui n'est pas très bon en terme de complexité en temps.</li>
+<li>Cependant, pour un tableau trié ou presque trié, la complexité tombe en <span class="arithmatex">\(\mathscr{O}(n)\)</span>, ce qui est une complexité linéaire, très efficace.</li>
 </ul>
 </div>
 <div class="admonition question">
@@ -2036,7 +2036,7 @@
 <p class="admonition-title">Quelques remarques</p>
 <ul>
 <li>Le tri par sélection est un <mark class="critic"><strong>tri en place</strong></mark>, car il trie un tableau sans avoir besoin de tableau auxilliaire.</li>
-<li>La complexité du tri par sélection est <mark class="critic"><strong>quadratique</strong></mark>, c'est-à-dire en <span class="arithmatex">\(mathscr{O}(n^2)\)</span> ddans tous les cas, puisqu'il faut parcourir chques sous-tableau afin de trouver son minimum, et ce pour chaque élément du tableau.</li>
+<li>La complexité du tri par sélection est <mark class="critic"><strong>quadratique</strong></mark>, c'est-à-dire en <span class="arithmatex">\(\mathscr{O}(n^2)\)</span> ddans tous les cas, puisqu'il faut parcourir chques sous-tableau afin de trouver son minimum, et ce pour chaque élément du tableau.</li>
 </ul>
 </div>
 <div class="admonition question">
