--- a/site/NSI/Terminale/C05/AVL/index.html
+++ b/site/NSI/Terminale/C05/AVL/index.html
@@ -1941,7 +1941,7 @@
 <li>les noeuds 3, 7 et 13 de 3 ;</li>
 <li>le noeud 9 de 4.</li>
 </ul>
-<p>le temps moyen de recherche sur cet arbre est donc $\dfrac{1+2\times 2 + 3\times 3 + 4}{7} = \dfrac{18}{7}.</p>
+<p>le temps moyen de recherche sur cet arbre est donc <span class="arithmatex">\(\dfrac{1+2\times 2 + 3\times 3 + 4}{7} = \dfrac{18}{7}\)</span>.</p>
 <p>Calculer de même le temps moyen pour les ABR <code>tree2</code>, <code>tree3</code> et <code>tree4</code>.
 Que peut-on en conclure ?</p>
 </li>
