--- a/site/SNT/Reseaux/DHCP_DNS/index.html
+++ b/site/SNT/Reseaux/DHCP_DNS/index.html
@@ -2063,19 +2063,23 @@
 <li>
 <p>Relier les deux routeurs entre eux par un cable.</p>
 </li>
-<li>Pour le routeur du réseau <code>192.168.0.X</code> :<ul>
+<li>
+<p>Pour le routeur du réseau <code>192.168.0.X</code> :</p>
+<ul>
 <li>Donner sur l'interface de liaison entre routeurs l'IP <code>1.0.0.1</code>, avec un masque <code>255.0.0.0</code> ;</li>
 <li>Dans l'onglet <code>General</code>, cocher la case <code>Routage Automatique</code> ;</li>
-<li>Donner comme passerelle <code>1.0.0.2</code></li>
 </ul>
 </li>
-<li>Pour le routeur du réseau <code>172.16.180.X</code> :<ul>
+<li>
+<p>Pour le routeur du réseau <code>172.16.180.X</code> :</p>
+<ul>
 <li>Donner sur l'interface de liaison entre routeurs l'IP <code>1.0.0.2</code>, avec un masque <code>255.0.0.0</code> ;</li>
 <li>Dans l'onglet <code>General</code>, cocher la case <code>Routage Automatique</code> ;</li>
-<li>Donner comme passerelle <code>1.0.0.1</code>.</li>
 </ul>
 </li>
-<li>Placer un ordinateur que vous relierez par un câble au routeur directement lié au réseau <code>192.168.0.X</code>.</li>
+<li>
+<p>Placer un ordinateur que vous relierez par un câble au routeur directement lié au réseau <code>192.168.0.X</code>.</p>
+</li>
 <li>Configurez cet ordinateur de la manière suivante :<ul>
 <li>Nom : Serveur DNS</li>
 <li>IP : <code>10.0.0.100</code></li>
