--- a/site/NSI/Terminale/C08/alignSeq/index.html
+++ b/site/NSI/Terminale/C08/alignSeq/index.html
@@ -2375,7 +2375,8 @@
 <p><img alt="GrapheGrasGers.png" src="../GrapheGrasGers.png" style="width:80%; margin:auto;display:block;background-color: #546d78;" /></p>
 <h2 id="resolution-par-une-methode-iterative">Résolution par une méthode itérative</h2>
 <h3 id="activite-debranchee">Activité débranchée</h3>
-<p>Considérons les deux chaînes de caractères <code>GENOME</code> et <code>ENORME</code>. Afin de chercher le nombre minimal d'insertion à effectuer, nous allons compléter le tableau suivant, avec la convention suivante : à l'intersection de la colonne <code>N</code> et de la première ligne <code>E</code> se trouve le nombre minimal d'insertion nécessaire pour aligner les chaînes <code>GEN</code> et <code>E</code>, c'est-à-dire 2 tirets. Par convention la première ligne et la première colonne correspondent à une chaîne vide.</p>
+<p>Considérons les deux chaînes de caractères <code>GENOME</code> et <code>ENORME</code>. Afin de chercher le nombre minimal d'insertion à effectuer, nous allons compléter le tableau suivant, avec la convention suivante : à l'intersection de la colonne <code>N</code> et de la première ligne <code>E</code> se trouve le nombre minimal d'insertion nécessaire pour aligner les chaînes <code>EN</code> et <code>GE</code>, c'est-à-dire 2 tirets. Par convention la première ligne et la première colonne correspondent à une chaîne vide.</p>
+<p><img alt="tabAlign.png" src="../tabAlign.png" style="width:50%; margin:auto;display:block;background-color: #546d78;" /></p>
 <div class="admonition question">
 <p class="admonition-title">Question</p>
 <div class="tabbed-set" data-tabs="1:2"><input checked="checked" id="__tabbed_1_1" name="__tabbed_1" type="radio" /><label for="__tabbed_1_1">Enoncé</label><div class="tabbed-content">
