--- a/site/NSI/Terminale/C08/alignSeq/index.html
+++ b/site/NSI/Terminale/C08/alignSeq/index.html
@@ -2479,7 +2479,7 @@
 </li>
 <li>
 <p>On termine alors de compléter le tableau :</p>
-<p><img alt="tabAlign_Cas_2_2.png" src="../tabAlign_Cas_2_2.png" style="width:30%; margin:auto;display:block;background-color: #546d78;" /></p>
+<p><img alt="tabAlignComplet.png" src="../tabAlignComplet.png" style="width:30%; margin:auto;display:block;background-color: #546d78;" /></p>
 </li>
 </ol>
 </div>
